k8s/robot-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robot-service
spec:
  selector:
    app: robot-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
