k8s/robot-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-service-ingress
spec:
  rules:
    - host: robot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robot-service
                port:
                  number: 80
